--- a/BButton-Biodiversity/templates/index.html
+++ b/BButton-Biodiversity/templates/index.html
@@ -31,20 +31,20 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5">
-        <div id="pie"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
+      <div class="row">
+        <div class="col-md-5">
+          <div id="pie"></div>
+        </div>
+        <div class="col-md-5">
+          <div id="gauge"></div>
+        </div>
+        <div class="wd-100"></div>
+        <div class="col-md-10">
+          <div id="bubble"></div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-10">
-      <div id="bubble"></div>
-    </div>
-  </div>
-
   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
